[package]
name = "issue-tracking"
version = "1.0.0"
authors = ["Téo Biton"]
edition = "2021"
description = "GitHub issues parser and exporter from JSON to csv"
readme = "README.md"
repository = "https://github.com/teobiton/issue-tracking"
licence = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
assert_cmd = "1.0.1"
clap = { version = "4.1.6", features = ["derive"] }
predicates = "1.0.5"
csv = "1.2.1"
serde = "1.0.162"
serde_json = "1.0.96"
serde_derive = "1.0.162"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}

